adding more photos

--- a/index.html
+++ b/index.html
@@ -145,7 +145,69 @@
         <img src="imgs/14.jpg" class="img-fluid  center-block">
       </div>
 
+      <div class = "col-md-4">
+        <img src="imgs/elias-poop-emoji-2018-06.jpg" class="img-fluid  center-block">
+      </div>
+      <div class = "col-md-4">
+        <img src="imgs/malin-ryan.jpg" class="img-fluid  center-block">
+      </div>
+      <div class = "col-md-4">
+        <img src="imgs/willow-elias-sunset.jpg" class="img-fluid  center-block">
+      </div>
 
+      <div class = "col-md-4">
+        <img src="imgs/men-boardwalk-leica.jpg" class="img-fluid  center-block">
+      </div>
+      <div class = "col-md-4">
+        <img src="imgs/willow-bed-light.jpg" class="img-fluid  center-block">
+      </div>
+      <div class = "col-md-4">
+        <img src="imgs/nude-study-100.jpg" class="img-fluid  center-block">
+      </div>
+
+      <div class = "col-md-4">
+        <img src="imgs/eames-i-love-to-bowl.jpg" class="img-fluid  center-block">
+      </div>
+      <div class = "col-md-4">
+        <img src="imgs/kim-girls-stone-ridge-table.jpg" class="img-fluid  center-block">
+      </div>
+      <div class = "col-md-4">
+        <img src="imgs/amywilson.jpg" class="img-fluid  center-block">
+      </div>
+      <div class = "col-md-4">
+        <img src="imgs/eames-last-light-flower-face.jpg" class="img-fluid  center-block">
+      </div>
+
+
+
+      <div class = "col-md-4">
+        <img src="imgs/irisbnw_wrking.jpg" class="img-fluid  center-block">
+      </div>
+
+      <div class = "col-md-4">
+        <img src="imgs/portrait-of-a-teenager.jpg" class="img-fluid  center-block">
+      </div>
+
+
+      <div class = "col-md-4">
+        <img src="imgs/back-hair.jpg" class="img-fluid  center-block">
+      </div>
+
+      <div class = "col-md-4">
+        <img src="imgs/rachel-mirror.jpg" class="img-fluid  center-block">
+      </div>
+
+      <div class = "col-md-4">
+        <img src="imgs/back-hair.jpg" class="img-fluid  center-block">
+      </div>
+
+      <div class = "col-md-4">
+        <img src="imgs/briana.jpg" class="img-fluid  center-block">
+      </div>
+
+      <div class = "col-md-4">
+        <img src="imgs/self-4th-of-july.jpg" class="img-fluid  center-block">
+      </div>
             </div>
           </div>
         </div>
