couple more fixes

--- a/index.html
+++ b/index.html
@@ -185,12 +185,7 @@
       </div>
 
       <div class = "col-md-4">
-        <img src="imgs/portrait-of-a-teenager.jpg" class="img-fluid  center-block">
-      </div>
-
-
-      <div class = "col-md-4">
-        <img src="imgs/back-hair.jpg" class="img-fluid  center-block">
+        <img src="imgs/route-66-end.jpg" class="img-fluid  center-block">
       </div>
 
       <div class = "col-md-4">
@@ -199,6 +194,14 @@
 
       <div class = "col-md-4">
         <img src="imgs/back-hair.jpg" class="img-fluid  center-block">
+      </div>
+
+      <div class = "col-md-4">
+        <img src="imgs/alan-birthday.jpg" class="img-fluid  center-block">
+      </div>
+
+      <div class = "col-md-4">
+        <img src="imgs/sisters-smiling.jpg" class="img-fluid  center-block">
       </div>
 
       <div class = "col-md-4">
