--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/app.js"></script>
+    <script src="js/myfade.js"></script>
 
 
   </body>
