--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Archivo" rel="stylesheet">
-      <!-- <link href="animate_css/animate.css" rel="stylesheet"> -->
+    <link href="animate_css/animate.css" rel="stylesheet">
    <link href="css/style.css" rel="stylesheet">
 
 
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       <!-- Fixed navbar -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">D.Titus Photography</a>
+        <a class="navbar-brand" href="#"><!--D.Titus Photography--></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -116,7 +116,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class = "myfade">
         <!-- under construction alert -->
               <div class="alert alert-secondary underConstruction" role="alert">
-                  We Currently Under Construction. Enjoy Some Images
+                  Today is a web development day. Have a look at some images. Everything else is being worked on.
               </div>
 
       <div class="row">
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
 
         <!--modal -->
-  <div id="myModal" class="modal fade">
+  <div id="myModal" class="modal animated rollIn">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class = "modal-body">
