--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <!-- <link rel="icon" href="../../favicon.ico"> -->
+    <link rel="icon" href="imgs/favicon.ico">
 
 
     <title>Douglas Titus Photography</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css?family=Archivo" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
     <link href="animate_css/animate.css" rel="stylesheet">
    <link href="css/style.css" rel="stylesheet">
 
@@ -87,7 +87,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       <!-- Fixed navbar -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#"><!--D.Titus Photography--></a>
+        <a class="navbar-brand" href="#"></a>
+
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -104,7 +106,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
              <a class="nav-link" href="#">Contact</a>
            </li>
             <li class="nav-item">
-              <a class="nav-link" href="client-login.html">Client Login</a>
+              <a class="nav-link" href="#">Client Login</a>
             </li>
           </ul>
         </div>
@@ -114,10 +116,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       <div class="dynamicGallery">
       <div class = "myfade">
-        <!-- under construction alert -->
-              <div class="alert alert-secondary underConstruction" role="alert">
-                  Today is a web development day. Have a look at some images. Everything else is being worked on.
-              </div>
 
       <div class="row">
 
@@ -279,8 +277,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div>
 
-        <!--modal -->
-  <div id="myModal" class="modal animated rollIn">
+        <!--modal  with the css animated on the modal-->
+  <div id="myModal" class="modal animated pulse">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class = "modal-body">
