switched around index and hero pages

--- a/hero.html
+++ b/hero.html
@@ -20,6 +20,7 @@
     <link href="animate_css/animate.css" rel="stylesheet">
    <link href="css/style.css" rel="stylesheet">
    <link href="css/starter-template.css" rel="stylesheet">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 
    <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -122,6 +123,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <h1 class="mainHeader">Look Mom No Hands</h1>
     <p class="lead">Photography<br> 2006 - 2019</p>
   </div>
+
 
 </main><!-- /.container -->
 
