--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -18,6 +19,8 @@
    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
     <link href="animate_css/animate.css" rel="stylesheet">
    <link href="css/style.css" rel="stylesheet">
+   <link href="css/starter-template.css" rel="stylesheet">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 
    <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -87,7 +90,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
       <!-- Fixed navbar -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#"></a>
+        <a class="navbar-brand" href="index.html"></a>
 
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -100,7 +103,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="#">About</a>
+              <a class="nav-link " href="about.html">About</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="gallery-1.html">Gallery-1</a>
             </li>
             <li class="nav-item" data-toggle="modal" data-target="#contactModal">
              <a class="nav-link" href="#">Contact</a>
@@ -111,195 +118,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </ul>
         </div>
       </nav>
-    </header>
+    <!-- </header> -->
 
+<main role="main" class="container-fluid">
 
-      <div class="dynamicGallery">
-      <div class = "myfade">
-
-      <div class="row">
-
-      <div class = "col-md-4">
-        <img src="imgs/5.jpg" class="img-fluid  center-block">
-      </div>
-
-      <div class = "col-md-4">
-        <img src="imgs/elias-skeleton.jpg" class="img-fluid center-block">
-      </div>
-
-
-     <div class = "col-md-4">
-      <img src="imgs/mardigras-mask.jpg" class="img-fluid  center-block">
-    </div>
-
-    <div class = "col-md-4">
-     <img src="imgs/elias-batboy.jpg" class="img-fluid  center-block">
-   </div>
-
-   <div class = "col-md-4">
-    <img src="imgs/ezra-pool-2018.jpg" class="img-fluid  center-block">
-   </div>
-
-      <div class = "col-md-4">
-       <img src="imgs/eames-yellow-chairs.jpg" class="img-fluid center-block">
-      </div>
-
-      <div class = "col-md-4">
-        <img src="imgs/11.jpg" class="img-fluid  center-block">
-      </div>
-
-      <div class = "col-md-4">
-       <img src="imgs/elias-light.jpg" class="img-fluid  center-block">
-      </div>
-
-      <div class = "col-md-4">
-        <img src="imgs/9.jpg" class="img-fluid   center-block">
-      </div>
-
-      <div class = "col-md-4">
-       <img src="imgs/lucas-tramp.jpg" class="img-fluid  center-block">
-     </div>
-
-     <div class = "col-md-4">
-      <img src="imgs/heather-double-2018.jpg" class="img-fluid  center-block">
-    </div>
-
-      <div class = "col-md-4">
-  <img src="imgs/16.jpg" class="img-fluid center-block">
-</div>
-
-
-  <div class = "col-md-4">
-    <img src="imgs/17.jpg" class="img-fluid center-block">
-  </div>
-
-  <div class = "col-md-4">
-    <img src="imgs/18.jpg" class="img-fluid center-block">
-  </div>
-
-  <div class = "col-md-4">
-    <img src="imgs/19.jpg" class="img-fluid center-block">
-  </div>
-
-  <div class = "col-md-4">
-    <img src="imgs/20.jpg" class="img-fluid center-block">
+  <div class="starter-template">
+  <img src="imgs/elias-full-screen.jpg" class="img-fluid" alt="Responsive image">
+    <h1 class="mainHeader">Look Mom No Hands</h1>
+    <p class="lead">Photography<br> 2006 - 2019</p>
   </div>
 
 
-
-   <div class = "col-md-4">
-    <img src="imgs/23.jpg" class="img-fluid center-block">
-  </div>
-
-        <div class = "col-md-4">
-          <img src="imgs/eames-willow-winter-fear.jpg" class="img-fluid  center-block">
-        </div>
-
-  <div class = "col-md-4">
-   <img src="imgs/8.jpg" class="img-fluid  center-block">
- </div>
-
- <div class = "col-md-4">
-  <img src="imgs/eames-diaper.jpg" class="img-fluid  center-block">
-</div>
-
-      <div class = "col-md-4">
-        <img src="imgs/14.jpg" class="img-fluid  center-block">
-      </div>
-
-      <div class = "col-md-4">
-        <img src="imgs/elias-poop-emoji-2018-06.jpg" class="img-fluid  center-block">
-      </div>
-      <div class = "col-md-4">
-        <img src="imgs/malin-ryan.jpg" class="img-fluid  center-block">
-      </div>
-      <div class = "col-md-4">
-        <img src="imgs/willow-elias-sunset.jpg" class="img-fluid  center-block">
-      </div>
-
-      <div class = "col-md-4">
-        <img src="imgs/men-boardwalk-leica.jpg" class="img-fluid  center-block">
-      </div>
-      <div class = "col-md-4">
-        <img src="imgs/willow-bed-light.jpg" class="img-fluid  center-block">
-      </div>
-      <div class = "col-md-4">
-        <img src="imgs/nude-study-100.jpg" class="img-fluid  center-block">
-      </div>
-
-      <div class = "col-md-4">
-        <img src="imgs/eames-i-love-to-bowl.jpg" class="img-fluid  center-block">
-      </div>
-      <div class = "col-md-4">
-        <img src="imgs/kim-girls-stone-ridge-table.jpg" class="img-fluid  center-block">
-      </div>
-      <div class = "col-md-4">
-        <img src="imgs/amywilson.jpg" class="img-fluid  center-block">
-      </div>
-      <div class = "col-md-4">
-        <img src="imgs/eames-last-light-flower-face.jpg" class="img-fluid  center-block">
-      </div>
-
-
-
-      <div class = "col-md-4">
-        <img src="imgs/irisbnw_wrking.jpg" class="img-fluid  center-block">
-      </div>
-
-      <div class = "col-md-4">
-        <img src="imgs/route-66-end.jpg" class="img-fluid  center-block">
-      </div>
-
-      <div class = "col-md-4">
-        <img src="imgs/rachel-mirror.jpg" class="img-fluid  center-block">
-      </div>
-
-      <div class = "col-md-4">
-        <img src="imgs/back-hair.jpg" class="img-fluid  center-block">
-      </div>
-
-      <div class = "col-md-4">
-        <img src="imgs/alan-birthday.jpg" class="img-fluid  center-block">
-      </div>
-
-      <div class = "col-md-4">
-        <img src="imgs/sisters-smiling.jpg" class="img-fluid  center-block">
-      </div>
-
-      <div class = "col-md-4">
-        <img src="imgs/briana.jpg" class="img-fluid  center-block">
-      </div>
-
-      <div class = "col-md-4">
-        <img src="imgs/self-4th-of-july.jpg" class="img-fluid  center-block">
-      </div>
-            </div>
-          </div>
-        </div>
-
-        <!--modal  with the css animated on the modal-->
-  <div id="myModal" class="modal animated pulse">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class = "modal-body">
-
-                <!-- Modal Content (The Image) -->
-                <img  src="" id = "mimg" class = "modalimg img-fluid ">
-
-
-
-    <div class="modal-footer">
-<button type="button" class=" btn btn-dark btn-sm" data-dismiss="modal" >Close</button>
-</div>
-
-              </div>
-        </div>
-
-        </div>
-      </div>
-    </div>
-<!-- end of  image modal -->
-
+</main><!-- /.container -->
 
 <!--contact model -->
 
@@ -338,24 +168,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
    </div>
  </div>
 </div>
+<!--end modal-->
 
 
-
-
-    </div><!-- /.container -->
-
-<!--firebase-->
-
-
-
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/app.js"></script>
-    <script src="js/myfade.js"></script>
-
-
-  </body>
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
+<script src="js/bootstrap.min.js"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="js/app.js"></script>
+<script src="js/myfade.js"></script>
+</body>
 </html>
