look mom no hands

--- a/index.html-backup-nav-issues.html
+++ b/index.html-backup-nav-issues.html
@@ -123,9 +123,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <main role="main" class="container-fluid">
 
   <div class="starter-template">
-  <img src="imgs/elias-full-screen.jpg" class="img-fluid " alt="Responsive image">
-    <h1 class="mainHeader ">Look Mom No Hands</h1>
-    <p class="lead ">Photography<br> 2006 - 2019</p>
+  <img src="imgs/rachel-mirror-large.jpg" class="img-fluid animated slideInDown" alt="Responsive image">
+    <h1 class="mainHeader animated slideInLeft">Look Mom No Hands</h1>
+    <p class="lead animated slideInRight">Photography<br> 2006 - 2019</p>
   </div>
 
 
