--- a/about.html
+++ b/about.html
@@ -1,125 +1,215 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <!-- <link rel="icon" href="../../favicon.ico"> -->
+    <link rel="icon" href="imgs/favicon.ico">
 
-
-    <title>Douglas Titus Photography</title>
+    <title>Douglas Titus Fine Art Photography Portraits Portrait Photography Grand Rapids Michigan</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-      <!-- <link href="animate_css/animate.css" rel="stylesheet"> -->
-        <link href="css/style.css" rel="stylesheet">
-         <link href="https://fonts.googleapis.com/css?family=Markazi+Text" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
+    <link href="animate_css/animate.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/starter-template.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+    <!-- use for media queries on index page -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-  </head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138445781-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-  <body>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-138445781-1');
+    </script>
+
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-5SGNWGT');
+    </script>
+    <!-- End Google Tag Manager -->
+
+    <!-- Facebook Pixel Code -->
+    <script>
+        ! function(f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function() {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = '2.0';
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '299615277402053');
+        fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=299615277402053&ev=PageView&noscript=1" /></noscript>
+    <!-- End Facebook Pixel Code -->
+
+    <!-- Hotjar Tracking Code for https://douglastitus.com -->
+    <script>
+        (function(h, o, t, j, a, r) {
+            h.hj = h.hj || function() {
+                (h.hj.q = h.hj.q || []).push(arguments)
+            };
+            h._hjSettings = {
+                hjid: 1284529,
+                hjsv: 6
+            };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script');
+            r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
+
+</head>
+
+<body>
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5SGNWGT" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <div class="container mainContainer">
 
+        <!-- Fixed navbar -->
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" href="index.html"></a>
 
-      <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Hello There</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="#">About</a>
-            </li>
-          </li>
-          <li class="nav-item" data-toggle="modal" data-target="#contactModal">
-           <a class="nav-link" href="#">Contact</a>
-         </li>
-            <li class="nav-item">
-              <a class="nav-link" href="client-login.html">Client Login/a>
-            </li>
-          </ul>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="gallery-1.html">Gallery-1</a>
+                    </li>
+                    <li class="nav-item" data-toggle="modal" data-target="#contactModal">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Client Login</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <!--about information -->
+        <div class="container ">
+            <center>
+                <div class="aboutMainContainer animated rotateIn">
+                    <a href="#aboutModal" data-toggle="modal" data-target="#aboutMeModal"><img src="/imgs/about-me.jpg" name="aboutme" width="250" height="250" class="rounded-circle"></a>
+                </div>
+            </center>
+
+            <div class="about-me animated fadeInUp">
+                <p>I believe that the process of making a good photograph requires a symbiotic relationship between the photographer and her subject. My work is an exploration of that relationship.</p>
+                <p>If you would like to learn more about me, commission a portrait, book me for a private event or just make something beautiful together, click on the link below to get started. And if you see something you like and would like to purchase a print I can make that happen. </p>
         </div>
-      </nav>
-    </header>
 
+        <center>
 
-      <div class="dynamicGallery">
-      <div class = "myfade">
-      <div class="row">
+            <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#contactModal">Contact</button>
 
-      <div class = "col-lg-12 topDiv">
-            <p>Bacon ipsum dolor amet turducken short loin boudin, pork alcatra fatback chuck kevin pork belly shankle capicola cupim beef. Ball tip kevin buffalo bresaola brisket doner jowl, salami turkey meatball shankle picanha jerky ground round andouille. Kielbasa biltong pork ball tip spare ribs cupim pork chop ribeye picanha ground round hamburger sirloin doner. Ball tip spare ribs rump alcatra flank turkey biltong kevin shoulder venison. Andouille fatback jerky alcatra frankfurter venison kevin corned beef. Flank salami jowl spare ribs corned beef alcatra.
+        </center>
 
-Sausage jerky venison, bacon cow buffalo tri-tip porchetta meatloaf kevin. Alcatra beef landjaeger, ribeye short ribs cow shank turducken. Pig doner turducken tenderloin pork chop strip steak venison short loin tri-tip. Buffalo capicola tail tongue leberkas kevin andouille meatloaf jowl. Brisket boudin jerky pancetta biltong burgdoggen, short ribs doner turkey shankle. Shankle bresaola tenderloin strip steak jowl, doner corned beef capicola short loin shoulder porchetta andouille pork spare ribs cow.</p>
-              </div>
+        <!--contact model -->
+
+        <div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-full" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="contactModalLabel">Let's Talk</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="theForm">
+                            <div class="form-group">
+                                <label for="recipient-name" class="col-form-label">Name:</label>
+                                <input type="text" name="form_field_1" class="form-control" id="form_field_1" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="recipient-name" class="col-form-label">Email:</label>
+                                <input type="email" name="form_field_2" class="form-control" id="form_field_2" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="message-text" class="col-form-label">Message:</label>
+                                <textarea class="form-control" name="form_field_3" id="form_field_3"></textarea>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" id="submit-form" class="btn btn-primary">Send message</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        </div>
-      </div>
     </div>
-<!-- end of modal -->
+    <!-- /.container -->
 
-<!--contact model -->
-
-<div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel" aria-hidden="true">
- <div class="modal-dialog" role="document">
-   <div class="modal-content">
-     <div class="modal-header">
-       <h5 class="modal-title" id="contactModalLabel">Let's Talk</h5>
-       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-         <span aria-hidden="true">&times;</span>
-       </button>
-     </div>
-     <div class="modal-body">
-       <form id = "theForm">
-         <div class="form-group">
-           <label for="recipient-name" class="col-form-label">Name:</label>
-           <input type="text" name="form_field_1" class="form-control" id="form_field_1" required>
-         </div>
-
-         <div class="form-group">
-           <label for="recipient-name" class="col-form-label">Email:</label>
-           <input type="email" name="form_field_2" class="form-control" id="form_field_2" required>
-         </div>
-
-         <div class="form-group">
-           <label for="message-text" class="col-form-label">Message:</label>
-           <textarea class="form-control" name ="form_field_3" id="form_field_3"></textarea>
-         </div>
-       </form>
-     </div>
-     <div class="modal-footer">
-       <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-       <button type="button" id = "submit-form" class="btn btn-primary">Send message</button>
-     </div>
-   </div>
- </div>
-</div>
-
-
-    </div><!-- /.container -->
-
-<!--firebase-->
-
-
+    <!--firebase-->
 
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
+    <script>
+        window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')
+    </script>
     <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/app.js"></script>
 
+</body>
 
-  </body>
 </html>
