--- a/error.html
+++ b/error.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-    </head>
+<html>
+<head>
+  <link href="css/style.css" rel="stylesheet">
+</head>
     <body>
 
-    <p> error </p>
+    <div id="goat">
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/0IrNb_XBWLA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </div>
 
     </body>
+
     </html>
