--- a/gallery-1.html
+++ b/gallery-1.html
@@ -109,17 +109,7 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="about.html">About</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="gallery-1.html">Gallery-1</a>
-                    </li>
-                    <li class="nav-item" data-toggle="modal" data-target="#contactModal">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Client Login</a>
+                        <a class="nav-link" href="gallery-1.html">Gallery</a>
                     </li>
                 </ul>
             </div>
